--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   </head>
   <body>
-    <div class="main">
-      <div class="opacity">
-
-
-        <div class="badge">
-          <h1>Time til Glacier Meltdown!!!!</h1>
-        </div>
-        <div class="clock">
-          <span id="days"></span>
-          <span id="hours"></span>
-          <span id="minutes"></span>
-        </div>
-      </div>
-
-
-    </div>
+  
+	<div class="div-opacity">
+    
+		<div class="main">
+		  
+			<div class="badge">
+				<h1>Time til Glacier Meltdown!!!!</h1>
+			</div>
+			
+			<div class="clock-box">
+				<div id="counter">
+					<span id="days"></span>
+					<span id="hours"></span>
+					<span id="minutes"></span>
+					<span id="seconds"></span>
+				</div>
+			</div>
+			
+		</div>
+	
+	</div>
+	
     <script src="app.js" ></script>
   </body>
 </html>
